fixing some formatting issues

--- a/instructions.html
+++ b/instructions.html
@@ -20,7 +20,7 @@
 				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
 		</a>
 
-    <div class="dotdotdot" style="top:17%;left:50%;margin-left:-55px">
+    <div class="dotdotdot" style="top:16%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -28,15 +28,15 @@
       <div class="dot"></div>
     </div>
 
-    <div class="circle300 blue3" style="left:31%;top:26%"></div>
-    <div class="circle400 blue2" style="left:3%;top:19%"></div>
-    <div class="circle150 blue1" style="left:6%;top:30%"></div>
-    <div class="frame" style="height:350px; width:530px; left:8%;top:22%"></div>
+    <div class="circle300 blue3" style="left:31%;top:24%"></div>
+    <div class="circle400 blue2" style="left:3%;top:17%"></div>
+    <div class="circle150 blue1" style="left:6%;top:20%"></div>
+    <div class="frame" style="height:350px; width:530px; left:8%;top:20%"></div>
 
-    <div class="circle400 blue2" style="right:3%;top:60%"></div>
-    <div class="circle300 blue3" style="right:3%;top:55.5%"></div>
-    <div class="circle150 blue1" style="right:40%;top:67%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:58.5%"></div>
+    <div class="circle400 blue2" style="right:3%;top:62%"></div>
+    <div class="circle300 blue3" style="right:3%;top:57.5%"></div>
+    <div class="circle150 blue1" style="right:40%;top:69%"></div>
+    <div class="frame" style="height:350px; width:530px; left:52%;top:60.5%"></div>
 
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
@@ -73,17 +73,17 @@
 		<div class="Layer_1 aiAbs" style="top:8.7484%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
 			<p class="pstyle0">Ready to turn your document into some beautiful braille? Follow the instructions below to get started with the Portabraille Printer!</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:25.19%;left:56.6751%;width:36.7854%;">
+		<div class="Layer_1 aiAbs" style="top:23.19%;left:56.6751%;width:36.7854%;">
 			<p class="pstyle1">First, turn the printer on by flipping the power switch. </p>
 			<p>&nbsp;</p>
 			<p>(insert location of power switch)</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:39.7253%;left:10.3064%;width:79.2046%;">
+		<div class="Layer_1 aiAbs" style="top:35.7253%;left:50%;margin-left:-39.6%;width:79.2046%;">
 			<p class="pstyle2">Next, you&rsquo;ll need to you&rsquo;ll need to upload a file to the printer. </p>
 			<p>&nbsp;</p>
 			<p class="pstyle3">You can do this manually or wirelessly. If you&rsquo;d like to manually upload your file, insert a flash drive with the file into the printer USB port (insert location), then use the [PLAY/PAUSE] button on the interface to toggle through and select your file. If you&rsquo;d like to wirelessly upload your file, you need to connect your device to the Portabraille Wi-Fi network. The password is <b>TeamDotDotDot!</b> and you can connect to the network like you would any other new wifi network. Usually, this means going into your wifi settings and selecting the Portabraille network. Once you are on the network, to get to the Portabraille Portal interface, type <b>10.3.141.1:5000</b> into your browser search bar. In the portal, you can upload and submit your text file! </p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:54.9415%;right:55.4684%;width:38.691%;">
+		<div class="Layer_1 aiAbs" style="top:56.9415%;right:55.4684%;width:38.691%;">
 			<p class="pstyle4">Almost ready!  Prepare your paper and check the READY TO PRINT indicator.</p>
 			<p>&nbsp;</p>
 			<p class="pstyle5">The Portabraille Printer takes in one sheet of paper at a time, so you&rsquo;ll need to manually feed in each sheet by lining it up in the paper tray [insert location of paper tray]. Additionally, before you print, make sure to get visual or aural confirmation from the READY TO PRINT indicator!</p>
