--- a/sprint1.html
+++ b/sprint1.html
@@ -126,10 +126,10 @@
 		<div class="Layer_1 aiAbs" style="top:15.2198%;left:57.2451%;width:38.691%;">
 			<p class="pstyle2">Electrical</p>
 			<p>&nbsp;</p>
-			<p>The major electrical task for this sprint was powering the solenoid dimple press. There were many steps involved in this process. First, we needed to learn and understand the electricity and magnetism concepts behind our solenoids. This allowed us to calculate how much power we needed to give a solenoid. After that, we constructed a cicuit to power a single solenoid. When that was working, we controlled the solenoid with an arduino.</p>
+			<p>The major electrical task for this sprint was powering the solenoid dimple press. There were many steps involved in this process.</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:24.8188%;left:50.3167%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">*sprint 1 text*</p>
+			<p class="pstyle3">First, we needed to learn and understand the electricity and magnetism concepts behind our solenoids. This allowed us to calculate how much power we needed to give a solenoid. After that, we constructed a cicuit to power a single solenoid. When that was working, we controlled the solenoid with an arduino.</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:35.8752%;right:57.8784%;width:38.691%;">
 			<p class="pstyle0">Mechanical</p>
@@ -142,10 +142,10 @@
 		<div class="Layer_1 aiAbs" style="top:57.5512%;left:57.4736%;width:38.691%;">
 			<p class="pstyle2">Software</p>
 			<p>&nbsp;</p>
-			<p>The largest software task this sprint was doing braille translation and sizing. In this sprint, we outlined the software architecture of everything having to do with the translation and printing of text. In this sprint, we did all of the processing (and not the physical printing) of text. Essentially, this sprint we wrote the code that would take in a text document in English, parse it, break it into segments (by paragraph), translate it into braille using accurate braille rules and conventions, and then return the number of lines in the segment and the size on a page that it would take up. </p>
+			<p>The largest software task this sprint was doing braille translation and sizing. In this sprint, we outlined the software architecture of everything having to do with the translation and printing of text. In this sprint, we did all of the processing (and not the physical printing) of text.</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:66.9287%;left:50.5452%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">In this sprint we also tackled relatively small things like creating and setting up a GitHub and finding a Raspberry Pi. </p>
+			<p class="pstyle3">Essentially, this sprint we wrote the code that would take in a text document in English, parse it, break it into segments (by paragraph), translate it into braille using accurate braille rules and conventions, and then return the number of lines in the segment and the size on a page that it would take up. Additionally, in this sprint we also tackled relatively small things like creating and setting up a GitHub and finding a Raspberry Pi. </p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:78.0752%;right:57.8784%;width:38.691%;">
 			<p class="pstyle0">Design</p>
