--- a/team.html
+++ b/team.html
@@ -116,7 +116,7 @@
 		<div class="Layer_1 aiAbs" style="top:90.2849%;left:49.9933%;margin-left:-39.4366%;width:78.8732%;">
 			<p class="pstyle3">Want to get in contact with us? </p>
 			<p>&nbsp;</p>
-			<p class="pstyle4">Feel free to reach out to us individually or email us *here*! </p>
+			<p class="pstyle4">Feel free to reach out to us individually or contact us through GitHub! </p>
 			<p class="pstyle4">We&rsquo;d love to hear any thoughts, suggestions, or cute puns you might have about this project!</p>
 		</div>
 
