--- a/index.html
+++ b/index.html
@@ -109,23 +109,23 @@
 		<div class="Layer_1 aiAbs" style="top:30.2%;left:56.6751%;width:36.7854%;">
 			<p class="pstyle2">We created the Portabraille Printer with those who are visually impaired in mind.</p>
 			<p>&nbsp;</p>
-			<p>Insert info about user testing and any features we designed with those who are visually impaired in mind (eg: interface, portability, etc)</p>
+			<p>We designed with along with users and, following their feedback, made sure to keep the Portabraille Printer portable, accurate, light, fast, and cheap.</p>
 		</div>
 
 		<div class="Layer_1 aiAbs" style="top:44.5%;right:55.6748%;width:38.691%;">
 			<p class="pstyle3">The Portabraille Printer takes in a text file, converts it to braille, and embosses a sheet of paper with the converted braille.</p>
 			<p>&nbsp;</p>
-			<p class="pstyle4">First, users input their file via a USB port. *insert info about how the text-to-braille software works and probably a bit about the interface too, try to keep it simple and elaborate later in the blog*</p>
+			<p class="pstyle4">First, users input their file either via a USB port or over the printer's wireless network. Once the file is loaded, users can use the interface to control the print. When the print is started, the chosen file is converted into printable braille!</p>
 		</div>
 
 		<div class="Layer_1 aiAbs" style="top:60%;left:59.0617%;width:36.7854%;">
-			<p>Next, the printer *insert info about how the firmware works, also insert info about the mechanical design*</p>
+			<p>Next, the printer loads in a sheet of paper using a stepper motor attached to paper rollers. Fourteen solenoids anchored to a carriage move along a single axis, punching each dimple. The solenoids and motors are controlled by a custom PCB designed in-house.</p>
 		</div>
 
 		<div class="Layer_1 aiAbs" style="top:73.9803%;right:56.2706%;width:38.691%;">
-			<p class="pstyle4">Finally, the Portabraille Printer spits out a page of freshly printed braille, ready for the reading!</p>
+			<p class="pstyle4">Finally, the Portabraille Printer spits out a page of freshly printed braille, ready for the reading.</p>
 			<p>&nbsp;</p>
-			<p class="pstyle4">For a more technical overview of what the printer does and how we built it, head to our blog here.</p>
+			<p class="pstyle4">For a more detailed look at what the printer does and how we built it, feel free to check out our system overview, our process overview, and our blog!</p>
 		</div>
 
 		<div class="Layer_1 aiAbs" style="top:87.7%;left:50%;margin-left:-36.2055%;width:72.4109%;">
