--- a/team.html
+++ b/team.html
@@ -103,7 +103,7 @@
 		</div>
 		<div class="Layer_1 aiAbs" style="top:52%;left:3.5479%;width:40%;">
 			<p>&nbsp;</p>
-			<p class="pstyle2"><span class="cstyle0">Nathan </span>is a person who has many interests and will write his own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about his identity as an engineer/designer/person in the world.</p>
+			<p class="pstyle2"><span class="cstyle0">Nathan </span> Weil is an engineering and mechatronics student. He loves CAD, a cappella, flight, his Mac, and photography. He worked on the mechanical design of the printer and is well-known on the team for always having a spare juicebox to share.</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:52%;right:3.5479%;width:40%;">
 			<p>&nbsp;</p>
@@ -111,7 +111,7 @@
 		</div>
 		<div class="Layer_1 aiAbs" style="top:74%;left:50%;margin-left:-19%;width:40%;">
 			<p>&nbsp;</p>
-			<p class="pstyle2"><span class="cstyle0">Annie</span> is a person who has many interests and will write her own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about her identity as an engineer/designer/person in the world.</p>
+			<p class="pstyle2"><span class="cstyle0">Annie</span> Tor is an engineering with design student. She designed and built this website, coordinated user testing, and did a whole lot of other miscellaneous tasks. In her spare time, she wonders what the weather's like in California.</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:90.2849%;left:49.9933%;margin-left:-39.4366%;width:78.8732%;">
 			<p class="pstyle3">Want to get in contact with us? </p>
