Oops, forgot we weren't doing this in the code

--- a/sprint2.html
+++ b/sprint2.html
@@ -121,12 +121,12 @@
 			<p>&nbsp;</p>
 			<p class="pstyle0">During Sprint 2, our goal was to have a basic minimum viable product, or at least to have a minimum of every subsystem, even if they were not integrated.</p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">Brief summary of what we did</p>
+			<p class="pstyle1">In this sprint, we focussed on preparing for user testing, and created prototypes of interfaces to test with. We also finished up all of our text side software and created our firmware during. This sprint, we created a moving gantry and mounted some solenoids and a punch plate. This sprint was where the pieces all really started coming together, and we were very close to a minimum viable product: a machine which could take in a text file and punch solenoids according to the braille characters. </p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:15.2198%;left:57.2451%;width:38.691%;">
 			<p class="pstyle2">Electrical</p>
 			<p>&nbsp;</p>
-			<p>*sprint 2 text*</p>
+			<p>*sprint 2 text</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:24.8188%;left:50.3167%;margin-left:-40.8865%;width:81.773%;">
 			<p class="pstyle3">*sprint 2 text*</p>
