some evidence of progress so you know I'm working

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <div class="circle450 blue3" style="left:55%;top:16.5%"></div>
     <div class="circle250 blue1" style="left:72%;top:9.5%"></div>
     <div class="circle675 blue2" style="left:10%;top:9.5%"></div>
-    <div class="frame" style="height:600px; width:880px; left:50%;margin-left:-440px;top:11.5%"></div>
+    <div class="aiAbs" style="align:center;height:13.3%;width:71.33%;left:50%;margin-left:-36%;top:11.5%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="The Portabraille Printer!" style="width:95%;height:93%;top:25px;left:50%;margin-left:-47%" src="Website Graphics\homepagePrinter.jpg"/></img>
+    </div>
 
     <div class="dotdotdot" style="top:27.4%;left:50%;margin-left:-55px">
       <div class="dot"></div>
@@ -36,7 +39,10 @@
     <div class="circle400 blue2" style="left:3%;top:28.1%"></div>
     <div class="circle300 blue3" style="left:3%;top:33.7%"></div>
     <div class="circle150 blue1" style="left:40%;top:36.1%"></div>
-    <div class="frame" style="height:350px; width:530px; left:6%;top:30.6%"></div>
+    <div class="aiAbs" style="align:center;height:7.8%;width:43%;left:6%;top:30.6%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="The Portabraille Printer!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\homepagePunch.jpg"/></img>
+    </div>
 
     <div class="dotdotdot" style="top:42%;left:50%;margin-left:-55px">
       <div class="dot"></div>
@@ -49,17 +55,26 @@
     <div class="circle300 blue3" style="right:27%;top:49.5%"></div>
     <div class="circle400 blue2" style="right:3%;top:43.5%"></div>
     <div class="circle150 blue1" style="right:40%;top:44%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:45.8%"></div>
+    <div class="aiAbs" style="align:center;height:7.8%;width:43%;right:6%;top:45.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="The Portabraille Printer!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\homepageInterface.jpg"/></img>
+    </div>
 
     <div class="circle300 blue3" style="left:33%;top:62%"></div>
     <div class="circle400 blue2" style="left:3%;top:57%"></div>
     <div class="circle150 blue1" style="left:6%;top:65%"></div>
-    <div class="frame" style="height:350px; width:530px; left:8%;top:60.3%"></div>
+    <div class="aiAbs" style="align:center;height:7.8%;width:43%;left:6%;top:60.3%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="The Portabraille Printer!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\homepageSolenoids.jpg"/></img>
+    </div>
 
     <div class="circle400 blue2" style="right:3%;top:74.3%"></div>
     <div class="circle300 blue3" style="right:3%;top:71%"></div>
     <div class="circle150 blue1" style="right:40%;top:73%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:73.5%"></div>
+    <div class="aiAbs" style="align:center;height:7.8%;width:43%;right:6%;top:73.5%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="The Portabraille Printer!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\homepageFreshBraille.jpg"/></img>
+    </div>
 
     <div class="dotdotdot" style="top:84.7%;left:50%;margin-left:-55px">
       <div class="dot"></div>
@@ -122,7 +137,7 @@
 			<p>Next, the printer loads in a sheet of paper using a stepper motor attached to paper rollers. Fourteen solenoids anchored to a carriage move along a single axis, punching each dimple. The solenoids and motors are controlled by a custom PCB designed in-house.</p>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:73.9803%;right:56.2706%;width:38.691%;">
+		<div class="Layer_1 aiAbs" style="top:73.1803%;right:56.2706%;width:38.691%;">
 			<p class="pstyle4">Finally, the Portabraille Printer spits out a page of freshly printed braille, ready for the reading.</p>
 			<p>&nbsp;</p>
 			<p class="pstyle4">For a more detailed look at what the printer does and how we built it, feel free to check out our system overview, our process overview, and our blog!</p>
