--- a/process.html
+++ b/process.html
@@ -23,7 +23,10 @@
     <div class="circle400 blue2" style="left:3%;top:17%"></div>
     <div class="circle300 blue3" style="left:3%;top:31%"></div>
     <div class="circle150 blue1" style="left:40%;top:41%"></div>
-    <div class="frame" style="height:350px; width:530px; left:6%;top:21.5%"></div>
+    <div class="aiAbs" style="align:center;height:26.5%;width:38.6%;left:6%;top:21.5%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Fun team photo" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\processTeam.jpg"/></img>
+    </div>
 
     <div class="dotdotdot" style="top:59%;left:50%;margin-left:-55px">
       <div class="dot"></div>
