--- a/team.html
+++ b/team.html
@@ -25,27 +25,46 @@
     <div class="circle350 blue3" style="left:3%;top:11%"></div>
     <div class="circle150 blue1" style="left:3%;top:6%"></div>
     <div class="circle450 blue2" style="left:20%;top:6%"></div>
-    <div class="frame" style="height:350px; width:48%; left:5%;top:7%"></div>
+    <div class="aiAbs" style="align:center;height:9.5%;width:48%;left:5%;top:7%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Colin's Portrait" style="width:93%;height:89%;top:20px;left:50%;margin-left:-46%" src="Website Graphics\teamGroup.jpg"/></img>
+    </div>
+
 
     <div class="circle175 blue1" style="left:28.5%;top:20%"></div>
     <div class="circle350 blue2" style="left:4%;top:22.5%"></div>
-    <div class="frame" style="height:280px; width:28.5%; left:9.5%;top:21.8%"></div>
+    <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;left:9%;top:21.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Colin's Portrait" style="width:91%;height:89%;top:20px;left:50%;margin-left:-44.5%" src="Website Graphics\teamColin.jpg"/></img>
+    </div>
 
     <div class="circle175 blue3" style="right:5%;top:20%"></div>
     <div class="circle350 blue1" style="right:20%;top:22.5%"></div>
-    <div class="frame" style="height:280px; width:28.5%; right:9.7%;top:21.8%"></div>
+    <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;right:9%;top:21.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Megan's Portrait" style="width:91%;height:89%;top:20px;right:50%;margin-right:-46.5%" src="Website Graphics\teamMegan.jpg"/></img>
+    </div>
 
     <div class="circle175 blue2" style="left:28.5%;top:42%"></div>
     <div class="circle350 blue1" style="left:4%;top:44.5%"></div>
-    <div class="frame" style="height:280px; width:28.5%; left:9.5%;top:43.8%"></div>
+    <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;left:9%;top:43.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Nathan's Portrait" style="width:91%;height:89%;top:20px;left:50%;margin-left:-44.5%" src="Website Graphics\teamNathan.jpg"/></img>
+    </div>
 
     <div class="circle175 blue1" style="right:5%;top:42%"></div>
     <div class="circle350 blue3" style="right:20%;top:44.5%"></div>
-    <div class="frame" style="height:280px; width:28.5%; right:9.7%;top:43.8%"></div>
+    <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;right:9%;top:43.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Megan's Portrait" style="width:91%;height:89%;top:20px;right:50%;margin-right:-46.5%" src="Website Graphics\teamMaia.jpg"/></img>
+    </div>
 
     <div class="circle175 blue3" style="right:30%;top:64%"></div>
     <div class="circle350 blue2" style="left:28.5%;top:66.5%"></div>
-    <div class="frame" style="height:280px; width:28.5%; left:50%;margin-left:-14.25%;top:65.8%"></div>
+    <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;left:50%;margin-left:-14.25%;top:65.8%">
+      <div class="frame" style="height:100%;width:100%;"></div>
+      <img class="portrait" alt="Annie's Portrait" style="width:91%;height:89%;top:20px;right:50%;margin-right:-46.5%" src="Website Graphics\teamAnnie.jpg"/></img>
+    </div>
 
     <div class="dotdotdot" style="top:87.5%;left:50%;margin-left:-55px">
       <div class="dot"></div>
@@ -91,11 +110,11 @@
 			<p>&nbsp;</p>
 			<p class="pstyle0">Our team consists of five very cool people with a variety of very cool skills!  </p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">*insert other info about the team?*</p>
+			<p class="pstyle1">We're engineers, programmers, designers, students, friends... but most importantly, we're great teammates! </p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:30%;left:3.5479%;width:40%;">
 			<p>&nbsp;</p>
-			<p class="pstyle2"><span class="cstyle0">Colin</span> is a person who has many interests and will write his own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about his identity as an engineer/designer/person in the world.</p>
+			<p class="pstyle2"><span class="cstyle0">Colin</span> Snow is an engineering student who loves bread, tackling really challenging technical problems, and making sassy remarks. He contributed to all facets of the project, but especially to the firmware. Colin would like to thank his team, his awesome friends, and his sourdough starter for contributing to his success.</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:30%;right:3.5479%;width:40%;">
 			<p>&nbsp;</p>
@@ -113,10 +132,10 @@
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Annie</span> Tor is an engineering with design student. She designed and built this website, coordinated user testing, and did a whole lot of other miscellaneous tasks. In her spare time, she wonders what the weather's like in California.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:90.2849%;left:49.9933%;margin-left:-39.4366%;width:78.8732%;">
+		<div class="Layer_1 aiAbs" style="top:90.2849%;left:49.9933%;margin-left:-40.4366%;width:81.8732%;">
 			<p class="pstyle3">Want to get in contact with us? </p>
 			<p>&nbsp;</p>
-			<p class="pstyle4">Feel free to reach out to us individually or contact us through GitHub! </p>
+			<p class="pstyle4">Feel free to reach out to us individually or contact us through our <a class="pstyle4" style="font-weight:600" href="https://github.com/maiam6242/braille-printer">GitHub</a>!</p>
 			<p class="pstyle4">We&rsquo;d love to hear any thoughts, suggestions, or cute puns you might have about this project!</p>
 		</div>
 
