done with sprint 1

--- a/sprint1.html
+++ b/sprint1.html
@@ -10,10 +10,10 @@
 </head>
 
 <div id="sprint1-box" class="ai2html" style="width:100%">
-	<div id="sprint1" class="artboard" style="max-width:100%;max-height: 5827px" data-aspect-ratio="0.24" data-min-width="0">
+	<div id="sprint1" class="artboard" style="max-width:100%;max-height: 6035px" data-aspect-ratio="0.24" data-min-width="0">
 
 		<div class="header blue1"></div>
-		<div style="padding: 0 0 5567px 0;"></div>
+		<div style="padding: 0 0 5775px 0;"></div>
 		<div class="footer blue1"> </div>
 
 		<a href="https://maiam6242.github.io/braille-printer/">
@@ -23,9 +23,12 @@
 		<div class="circle400 blue2" style="right:3%;top:3.85%"></div>
     <div class="circle300 blue3" style="right:3%;top:6.8%"></div>
     <div class="circle150 blue1" style="left:44.8%;top:9.3%"></div>
-    <div class="frame" style="height:350px; width:530px; right:6%;top:4.8%"></div>
+		<div class="aiAbs" style="align:center;height:5.8%;width:43%;right:6.6%;top:4.8%">
+			<div class="frame" style="height:100%;width:100%;"></div>
+			<img class="portrait" alt="Sprint 1 Team Picture" style="width:91%;height:89%;top:25px;right:50%;margin-right:-46.5%" src="Website Graphics\sprint1Team.jpg"/></img>
+		</div>
 
-		<div class="dotdotdot" style="top:13.2%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:18.2%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -33,12 +36,15 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="right:45%;top:18.8%"></div>
-		<div class="circle400 blue2" style="left:3%;top:15.3%"></div>
-		<div class="circle150 blue1" style="right:46%;top:15.3%"></div>
-		<div class="frame" style="height:350px; width:530px; right:52%;top:16.3%"></div>
+		<div class="circle300 blue3" style="right:45%;top:23.5%"></div>
+		<div class="circle400 blue2" style="left:3%;top:20%"></div>
+		<div class="circle150 blue1" style="right:46%;top:20%"></div>
+		<div class="aiAbs" style="align:center;height:5.8%;width:43%;left:6.6%;top:21%">
+			<div class="frame" style="height:100%;width:100%;"></div>
+			<img class="portrait" alt="Sprint 1 Team Picture" style="width:91%;height:89%;top:25px;right:50%;margin-right:-46.5%" src="Website Graphics\sprint1Circuit.png"/></img>
+		</div>
 
-		<div class="dotdotdot" style="top:33.5%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:34.5%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -46,12 +52,15 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle400 blue2" style="right:3%;top:38.3%"></div>
-    <div class="circle300 blue3" style="right:3%;top:36%"></div>
-    <div class="circle150 blue1" style="left:49%;top:42%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:37.3%"></div>
+		<div class="circle400 blue2" style="right:3%;top:38%"></div>
+    <div class="circle300 blue3" style="right:3%;top:35.7%"></div>
+    <div class="circle150 blue1" style="left:49%;top:41.7%"></div>
+		<div class="aiAbs" style="align:center;height:5.8%;width:43%;right:6.6%;top:37%">
+			<div class="frame" style="height:100%;width:100%;"></div>
+			<img class="portrait" alt="Aluminum dimple press prototype" style="width:50%;height:89%;top:25px;right:50%;margin-right:-25%" src="Website Graphics\sprint1Puncher.png"/></img>
+		</div>
 
-		<div class="dotdotdot" style="top:55.1%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:51.3%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -59,12 +68,7 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="left:3%;top:61.4%"></div>
-    <div class="circle400 blue2" style="right:45%;top:57.4%"></div>
-    <div class="circle150 blue1" style="right:45%;top:63.4%"></div>
-    <div class="frame" style="height:350px; width:530px; left:8%;top:58.7%"></div>
-
-		<div class="dotdotdot" style="top:75.7%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:65.4%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -72,12 +76,15 @@
       <div class="dot"></div>
     </div>
 
-		<div class="circle300 blue3" style="left:45%;top:81.6%"></div>
-		<div class="circle400 blue2" style="right:3%;top:78.1%"></div>
-		<div class="circle150 blue1" style="left:46%;top:78.1%"></div>
-		<div class="frame" style="height:350px; width:530px; right:6%;top:79.1%"></div>
+		<div class="circle300 blue3" style="left:45%;top:69.6%"></div>
+		<div class="circle400 blue2" style="right:3%;top:67.1%"></div>
+		<div class="circle150 blue1" style="left:46%;top:67.1%"></div>
+		<div class="aiAbs" style="align:center;height:5.8%;width:43%;right:6.6%;top:68.1%">
+			<div class="frame" style="height:100%;width:100%;"></div>
+			<img class="portrait" alt="Whiteboard with initial brainstorm" style="width:91%;height:89%;top:25px;right:50%;margin-right:-46.5%" src="Website Graphics\sprint1Brainstorm.jpg"/></img>
+		</div>
 
-		<div class="dotdotdot" style="top:94%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:87.5%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -117,65 +124,66 @@
       <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:3.85%;left:5.727%;width:32.7258%;">
-			<p>&nbsp;</p>
+		<div class="Layer_1 aiAbs" style="top:5.6291%;right:61.5473%;width:32.7258%;">
 			<p class="pstyle0">During Sprint 1, our goal was to determine our project and then punch dimples in paper that are close to Braille spec effectively.</p>
-			<p>&nbsp;</p>
-			<p class="pstyle1">In this sprint, we did a ton of brainstorming about projects that were interesting to us, and then talked to subject matter experts from each project we were thinking about. Once we decided on creating a braille printer, we focused on creating and powering a dimple press, since we felt that the punching component would be the most difficult part of our project. </p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:15.2198%;left:57.2451%;width:38.691%;">
+		<div class="Layer_1 aiAbs" style="top:11.9799%;left:9.1068%;width:81.773%;">
+			<p class="pstyle1">In this sprint, we did a ton of brainstorming about projects that were interesting to us, and then talked to subject matter experts from each project we were thinking about. Once we decided on creating a braille printer, we focused on creating and powering a dimple press, since we felt that the punching component would be the most difficult part of our project.</p>
+		</div>
+		<div class="Layer_1 aiAbs" style="top:21.5542%;left:57.4736%;width:38.691%;">
 			<p class="pstyle2">Electrical</p>
 			<p>&nbsp;</p>
 			<p>The major electrical task for this sprint was powering the solenoid dimple press. There were many steps involved in this process.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:24.8188%;left:50.3167%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">First, we needed to learn and understand the electricity and magnetism concepts behind our solenoids. This allowed us to calculate how much power we needed to give a solenoid. After that, we constructed a cicuit to power a single solenoid. When that was working, we controlled the solenoid with an arduino.</p>
+		<div class="Layer_1 aiAbs" style="top:28.4022%;left:9.1068%;width:81.773%;">
+			<p class="pstyle1">First, we needed to learn and understand the electricity and magnetism concepts behind our solenoids. This allowed us to calculate how much power we needed to give a solenoid. After that, we constructed a circuit to power a single solenoid. When that was working, we controlled the solenoid with an Arduino. To the upper left is the diagram for the simple circuit used to control a single solenoid with the Arduino.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:35.8752%;right:57.8784%;width:38.691%;">
+		<div class="Layer_1 aiAbs" style="top:37.1907%;right:56.7884%;width:38.691%;">
 			<p class="pstyle0">Mechanical</p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">The most significant mechanically focused task that we worked on this sprint was creating the solenoid dimple press. SOMEONE WHO KNOWS MORE PLEASE PUT IN DETAILS :) </p>
+			<p class="pstyle3">The most significant mechanically focused task that we worked on this sprint was creating the solenoid dimple press and establishing an initial plan for our gantry.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:45.4632%;left:49.9222%;margin-left:-39.6852%;width:79.3703%;">
-			<p class="pstyle3">We also generated an initial plan and design for the gantry, which is the system that moves all of our solenoids.SOMEONE WHO KNOWS MORE PLEASE PUT IN DETAILS :) </p>
+		<div class="Layer_1 aiAbs" style="top:44.5037%;left:10.2912%;width:79.3703%;">
+			<p class="pstyle1">In order to verify that a small solenoid could punch an effective braille dot, we created a simple aluminum structure where a solenoid with a pin punched paper into a small aluminum plate with a small dimple in it. The pin pushing into the dimple forms the paper into a braille dot. We successfully verified that the solenoid is strong enough to punch braille dots! Additionally, we created a preliminary CAD model of what our printer might look like.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:57.5512%;left:57.4736%;width:38.691%;">
-			<p class="pstyle2">Software</p>
+		<div class="Layer_1 aiAbs" style="top:53.5969%;left:9.1068%;width:81.773%;">
+			<p class="pstyle2" style="text-align:center">Software</p>
 			<p>&nbsp;</p>
-			<p>The largest software task this sprint was doing braille translation and sizing. In this sprint, we outlined the software architecture of everything having to do with the translation and printing of text. In this sprint, we did all of the processing (and not the physical printing) of text.</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:66.9287%;left:50.5452%;margin-left:-40.8865%;width:81.773%;">
-			<p class="pstyle3">Essentially, this sprint we wrote the code that would take in a text document in English, parse it, break it into segments (by paragraph), translate it into braille using accurate braille rules and conventions, and then return the number of lines in the segment and the size on a page that it would take up. Additionally, in this sprint we also tackled relatively small things like creating and setting up a GitHub and finding a Raspberry Pi. </p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:78.0752%;right:57.8784%;width:38.691%;">
-			<p class="pstyle0">Design</p>
+			<p class="pstyle1">The largest software task this sprint was doing braille translation and sizing. In this sprint, we outlined the software architecture of everything having to do with the translation and printing of text. In this sprint, we did all of the processing (and not the physical printing) of text.</p>
 			<p>&nbsp;</p>
-			<p class="pstyle1">*sprint 1 text*</p>
+			<p class="pstyle1">Essentially, this sprint we wrote the code that would take in a text document in English, parse it, break it into segments (by paragraph), translate it into braille using accurate braille rules and conventions, and then return the number of lines in the segment and the size on a page that it would take up. Additionally, in this sprint we also tackled relatively small things like creating and setting up a GitHub and finding a Raspberry Pi.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:87.1632%;left:49.9222%;margin-left:-39.6852%;width:79.3703%;">
-			<p class="pstyle3">*sprint 1 text*</p>
+		<div class="Layer_1 aiAbs" style="top:68.4729%;right:57.3853%;width:38.111%;">
+			<p class="pstyle4">Design</p>
+			<p>&nbsp;</p>
+			<p class="pstyle5">This sprint, we focused on defining our team goals and guidelines as well as researching the outside-of-school meaning of this project.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:95.8973%;left:49.9782%;margin-left:-43%;width:86%;">
-			<p class="pstyle3">Other things if we have things to say (eg: major/minor pivots, lessons learned, fun facts)</p>
+		<div class="Layer_1 aiAbs" style="top:75.385%;left:9.7185%;width:80.5302%;">
+			<p class="pstyle6">To do this, we first shared our personal learning goals with one another&ndash; Meg&rsquo;s goal was to figure out her major, Colin&rsquo;s goal was to learn more about integration, Nathan&rsquo;s goal was to do things beyond just mechanical design, Maia&rsquo;s goal was to learn to manage cross-disciplinary teams, and Annie&rsquo;s goal was to learn something new. Next, we established our project goal: make a high-quality, technically challenging, and meaningful product that also fulfills our personal learning goals. We also expectations for deadlines, commitments, and communication.</p>
+			<p>&nbsp;</p>
+			<p class="pstyle6">To research the external applications of our project, we contacted professor Caitrin Lynch, and she gave us a bunch of contacts in the assistive tech realm to contact (thanks Caitrin!). We ended up calling and exchanging emails with several Olin alumni and a contact at The Carroll Center for the Blind, who directed us to even more people and resources (thanks Bruce!)</p>
+		</div>
+		<div class="Layer_1 aiAbs" style="top:89.8026%;left:10.2874%;width:80.5302%;">
+			<p class="pstyle6"><span class="cstyle0">Sprint 1 Fun Fact:</span> If we hadn&rsquo;t created the Portabraille, we would have tried to make a vibration reducing pen for Parkinson&rsquo;s patients. We actually talked to a Parkinson&rsquo;s clinic in California, and they said that a way for patients to more easily write even with tremors would best improve their quality of life. </p>
 		</div>
 
 		<div style="width:1000px;left:50%;margin-left:-500px">
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:9.4243%;width:81px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5995px;margin-top:-17.5px;left:9.4243%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
   		</div>
-      <div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:27%;width:81px;">
+      <div class="Layer_1 aiAbs aiPointText" style="top:5995px;margin-top:-17.5px;left:27%;width:81px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:42%;width:73px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5995px;margin-top:-17.5px;left:42%;width:73px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:57%;width:160px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5995px;margin-top:-17.5px;left:57%;width:160px;">
           <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:69%;width:133px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5995px;margin-top:-17.5px;left:69%;width:133px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:5787px;margin-top:-17.5px;left:85%;width:110px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:5995px;margin-top:-17.5px;left:85%;width:110px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
   		</div>
     </div>
